# projet12

projet-glade-master/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestionmenu.glade.bak  gestionmenu.gladep
projet-glade-master/autom4te.cache/: output.1  requests  traces.0  traces.1
projet-glade-master/po/: Makefile  Makefile.in
projet-glade-master/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  gestionmenu  interface.c  interface.c.bak  interface.h.bak  main.c  tmp.txt
